--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,9 +4,13 @@ phases:
   install:
     commands:
       - echo "Installing Terraform"
+      - apt install -y zip
       - curl -LO https://releases.hashicorp.com/terraform/1.9.5/terraform_1.9.5_linux_amd64.zip
       - unzip terraform_1.9.5_linux_amd64.zip
       - mv terraform /usr/local/bin/
+      - export AWS_ACCESS_KEY_ID="$ACCESS_KEY"
+      - export AWS_SECRET_ACCESS_KEY="SECRET_KEY"
+
   pre_build:
     commands:
       - echo "Changing to the specific directory"
