--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,8 +8,13 @@ phases:
       - curl -LO https://releases.hashicorp.com/terraform/1.9.5/terraform_1.9.5_linux_amd64.zip
       - unzip terraform_1.9.5_linux_amd64.zip
       - mv terraform /usr/local/bin/
-      - export AWS_ACCESS_KEY_ID="$ACCESS_KEY"
-      - export AWS_SECRET_ACCESS_KEY="SECRET_KEY"
+      - chmod +x /usr/local/bin/terraform
+      - terraform --version
+      - aws --version
+      - aws configure set default.region $REGION
+      - aws configure set default.aws_access_key_id $ACCESS_KEY
+      - aws configure set default.aws_secret_access_key $SECRET_KEY
+      - cat ~/.aws/credentials
 
   pre_build:
     commands:
