--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,5 +1,10 @@
 version: 0.2
 
+env:
+  variables:
+    TF_VAR_vpc-cidr-01: "10.80.0.0"
+    TF_VAR_vpc-name-01: "demo-vpc-01"
+
 phases:
   install:
     commands:
